--- a/app/pages/daily/economy/economy.html
+++ b/app/pages/daily/economy/economy.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>uuuuuuuuuu</ion-title>
+    <ion-title>uuuuuuuuuuytuytutyu</ion-title>
   </ion-navbar>
 
 </ion-header>
