--- a/app/pages/daily/dailyhome/dailyhome.html
+++ b/app/pages/daily/dailyhome/dailyhome.html
@@ -61,7 +61,7 @@
         <img src="img/sarah-avatar.png.jpeg">
       </ion-avatar>
 
-      <h4>执行人：小王</h4>
+      <h4>执行人：小王kk</h4>
       <p>May 12, 1984</p>
     </ion-item>
 
