--- a/app/pages/daily/dailyhome/dailyhome.html
+++ b/app/pages/daily/dailyhome/dailyhome.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>dailyhome</ion-title>
+    <ion-title>日常管理</ion-title>
   </ion-navbar>
 
 </ion-header>
