--- a/app/pages/purchase/requisition/requisition.html
+++ b/app/pages/purchase/requisition/requisition.html
@@ -15,4 +15,203 @@
 
 <ion-content padding>
 
+  <ion-toolbar [attr.primary]="isAndroid ? '' : null" no-border-top>
+    <ion-segment [(ngModel)]="pet" [attr.light]="isAndroid ? '' : null">
+
+      <ion-segment-button value="1">
+        采购申请
+      </ion-segment-button>
+
+      <ion-segment-button value="2">
+        申请说明
+      </ion-segment-button>
+
+      <ion-segment-button value="3">
+        申请审批
+      </ion-segment-button>
+
+      <ion-segment-button value="4">
+        申请状态
+      </ion-segment-button>
+
+    </ion-segment>
+  </ion-toolbar>
+
+  <div [ngSwitch]="pet">
+
+    <ion-card *ngSwitchCase="'1'">
+      <ion-card-content>
+
+        <ion-row>
+          <ion-col>
+            <button primary clear small>
+              <ion-icon name='ios-add-circle-outline'></ion-icon>
+              <div (click)="AddRequistion()">商品</div>
+            </button>
+          </ion-col>
+          <ion-col>
+            <button primary clear small>
+              <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+              <div (click)="AddRequisitionApprove()">审核</div>
+            </button>
+          </ion-col>
+          <ion-col center text-center>
+            <button primary clear small>
+              <ion-icon name='ios-more'></ion-icon>
+              <div (click)="AddRequisitionApprove()">更多</div>
+            </button>
+          </ion-col>
+        </ion-row>
+        <ion-list >
+
+        <ion-item>
+          <ion-thumbnail item-left>
+            <img src="img/thumbnail-puppy-1.jpg">
+          </ion-thumbnail>
+          <h2>Ruby</h2>
+        </ion-item>
+        <ion-item>
+          <ion-thumbnail item-left>
+            <img src="img/thumbnail-kitten-1.jpg">
+          </ion-thumbnail>
+          <h2>Ruby</h2>
+        </ion-item>
+        </ion-list>
+
+
+      </ion-card-content>
+    </ion-card>
+
+
+      <ion-row>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-add-circle-outline'></ion-icon>
+            <div (click)="AddRequistion()">商品</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+            <div (click)="AddRequisitionApprove()">审核</div>
+          </button>
+        </ion-col>
+        <ion-col center text-center>
+          <button primary clear small>
+            <ion-icon name='ios-more'></ion-icon>
+            <div (click)="AddRequisitionApprove()">更多</div>
+          </button>
+        </ion-col>
+      </ion-row>
+
+
+
+    <ion-card *ngSwitchCase="'2'">
+      <ion-card-content>
+    <ion-list >
+      <ion-row>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-add-circle-outline'></ion-icon>
+            <div (click)="AddInquiry()">添加</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+            <div>审核</div>
+          </button>
+        </ion-col>
+        <ion-col center text-center>
+          <button primary clear small>
+            <ion-icon name='ios-more'></ion-icon>
+            <div>更多</div>
+          </button>
+        </ion-col>
+      </ion-row>
+      <ion-item>
+        <ion-thumbnail item-left>
+          <img src="img/thumbnail-kitten-1.jpg">
+        </ion-thumbnail>
+        <h2>Luna</h2>
+      </ion-item>
+      ...
+    </ion-list>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'3'">
+      <ion-card-content>
+    <ion-list >
+      <ion-row>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-add-circle-outline'></ion-icon>
+            <div (click)="AddOrders()">添加</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+            <div>审核</div>
+          </button>
+        </ion-col>
+        <ion-col center text-center>
+          <button primary clear small>
+            <ion-icon name='ios-more'></ion-icon>
+            <div>更多</div>
+          </button>
+        </ion-col>
+      </ion-row>
+      <ion-item>
+        <ion-thumbnail item-left>
+          <img src="img/thumbnail-kitten-3.jpg">
+        </ion-thumbnail>
+        <h2>test</h2>
+      </ion-item>
+      ...
+    </ion-list>
+    </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'4'">
+      <ion-card-content>
+    <ion-list >
+
+      <ion-row>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-add-circle-outline'></ion-icon>
+            <div (click)="AddInvoices()">添加</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button primary clear small>
+            <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+            <div>审核</div>
+          </button>
+        </ion-col>
+        <ion-col center text-center>
+          <button primary clear small>
+            <ion-icon name='ios-more'></ion-icon>
+            <div>更多</div>
+          </button>
+        </ion-col>
+      </ion-row>
+
+      <ion-item>
+        <ion-thumbnail item-left>
+          <img src="img/thumbnail-kitten-1.jpg">
+        </ion-thumbnail>
+        <h2>4test</h2>
+      </ion-item>
+      ...
+    </ion-list>
+    </ion-card-content>
+    </ion-card>
+  </div>
+
+  <div style="height:5px;width:100%;background-color: #8f8f8f"></div>
+
+
 </ion-content>
