--- a/app/pages/sales/sreturngoodsmanager/sreturngoodsmanager.html
+++ b/app/pages/sales/sreturngoodsmanager/sreturngoodsmanager.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>sreturngoodsmanager</ion-title>
+    <ion-title>退货管理</ion-title>
   </ion-navbar>
 
 </ion-header>
