--- a/app/pages/purchase/requisition/requisition.html
+++ b/app/pages/purchase/requisition/requisition.html
@@ -19,7 +19,7 @@
     <ion-segment [(ngModel)]="pet" [attr.light]="isAndroid ? '' : null">
 
       <ion-segment-button value="1">
-        采购申请
+        采购申请aaa
       </ion-segment-button>
 
       <ion-segment-button value="2">
