--- a/app/pages/purchase/requisition/requisition.html
+++ b/app/pages/purchase/requisition/requisition.html
@@ -19,7 +19,7 @@
     <ion-segment [(ngModel)]="pet" [attr.light]="isAndroid ? '' : null">
 
       <ion-segment-button value="1">
-        采购申请aaa
+        采购申请
       </ion-segment-button>
 
       <ion-segment-button value="2">
@@ -123,7 +123,7 @@
         </ion-list>
       </ion-card-content>
       <ion-footer>
-        <ion-toolbar>bbbbbbbbbbbbbbbbbbbbbbb</ion-toolbar>
+        <ion-toolbar></ion-toolbar>
       </ion-footer>
     </ion-card>
 
