--- a/app/pages/purchase/inquiry/inquiry.html
+++ b/app/pages/purchase/inquiry/inquiry.html
@@ -20,19 +20,19 @@
     <ion-segment [(ngModel)]="pet" [attr.light]="isAndroid ? '' : null">
 
       <ion-segment-button value="1">
-        采购申请
+        申请询价
       </ion-segment-button>
 
       <ion-segment-button value="2">
-        申请说明
+        商品询价
       </ion-segment-button>
 
       <ion-segment-button value="3">
-        申请审批
+        申请状态
       </ion-segment-button>
 
       <ion-segment-button value="4">
-        申请状态
+        申请审批
       </ion-segment-button>
 
     </ion-segment>
