--- a/app/pages/purchase/inspection/inspection.html
+++ b/app/pages/purchase/inspection/inspection.html
@@ -120,7 +120,12 @@
         <ion-list>
           <ion-item>
             <ion-label primary>申请说明</ion-label>
-            <ion-textarea></ion-textarea></ion-item>
+            <ion-textarea></ion-textarea>
+          </ion-item>
+          <ion-item>
+            <ion-label floating>申请说明</ion-label>
+            <ion-textarea rows="6" placeholder="enter long description here..."></ion-textarea>
+          </ion-item>
         </ion-list>
       </ion-card-content>
       <ion-footer>
